kano/kano-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kano
spec:
  finalizers:
  - kubernetes
