kano/kano-deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kano-node
  namespace: kano
  labels:
    app: kano-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kano-node
  template:
    metadata:
      creationTimestamp:
      labels:
        app: kano-node
    spec:
      containers:
      - name: nextcloud 
        image: nextcloud 
        resources: {}
      - name: redis
        image: redis:alpine 
        resources: {}
  strategy: {}
status: {}
