kano/kano-db-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: multinode-db
  namespace: kano
spec:
  type: ExternalName
  externalName: multinode-db1.drive.test.sunet.se
  ports:
    - port: 3000
