kano/kano-service.yml
---
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: kano-node
    name: kano-node
    namespace: kano
  spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: kano-node
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
