kano/kano-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kano-ingress
  namespace: kano
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  defaultBackend:
    service:
      name: kano-node
      port:
        number: 8443
  tls:
    - hosts:
        - kano.drive.test.sunet.se 
      secretName: tls-secret
  
  rules:
  - host: kano.drive.test.sunet.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: kano-node
            port:
              number: 443
